03_infrastructure/observability/overlays/dev/ingress-prometheus-patch.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
spec:
  routes:
    - match: Host(`prometheus.127.0.0.1.xip.io`)
      kind: Rule
      services:
        - name: prometheus-gatekeeper
          port: 3000
      middlewares:
        - name: redirect-https
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-tls
spec:
  routes:
    - match: Host(`prometheus.127.0.0.1.xip.io`)
      kind: Rule
      services:
        - name: prometheus-gatekeeper
          port: 3000
